[gd_scene load_steps=5 format=3 uid="uid://bhlt8k8851465"]

[ext_resource type="Texture2D" uid="uid://btafu8sdwcfgt" path="res://src/art/slot.png" id="1_bs121"]
[ext_resource type="Script" path="res://src/scripts/search_grab_zone.gd" id="2_toyoj"]
[ext_resource type="Texture2D" uid="uid://b7w6c10qtk2iq" path="res://src/art/search_small.png" id="4_b4xmy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6mby4"]
radius = 60.0
height = 247.0

[node name="Slot" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_bs121")
stretch_mode = 2
script = ExtResource("2_toyoj")

[node name="Searchbar Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -7.0
offset_right = 96.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_b4xmy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(128, 64)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6mby4")

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
